// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourcePicker component snaps should render ResourcePicker in filtered mode 1`] = `
<div
  className="tc-resource-picker theme-tc-resource-picker"
>
  <Toolbar
    state={
      Object {
        "certified": true,
        "favorites": true,
      }
    }
  />
  <div
    className="theme-tc-resource-picker-list-container theme-filtered"
  >
    <VirtualizedList
      collection={
        Array [
          Object {
            "author": "Jean-Pierre DUPONT",
            "display": "text",
            "flags": Array [
              "CERTIFIED",
              "FAVORITE",
            ],
            "icon": "talend-file-xls-o",
            "id": 0,
            "modified": "2016-09-22",
            "name": "Title with few actions",
          },
          Object {
            "display": "text",
            "icon": "talend-file-xls-o",
            "id": 1,
            "modified": "2016-09-22",
            "name": "Title with lot of actions",
          },
          Object {
            "author": "Jean-Pierre DUPONT",
            "display": "text",
            "icon": "talend-file-xls-o",
            "id": 2,
            "modified": "2016-09-22",
            "name": "Title with persistant actions",
          },
        ]
      }
      defaultHeight={250}
      rowHeight={60}
      rowRenderers={
        Object {
          "resource": [Function],
        }
      }
      selectionMode="MULTI"
      type="resource"
    />
  </div>
</div>
`;

exports[`ResourcePicker component snaps should render ResourcePicker with some Resources 1`] = `
<div
  className="tc-resource-picker theme-tc-resource-picker"
>
  <Toolbar />
  <div
    className="theme-tc-resource-picker-list-container"
  >
    <VirtualizedList
      collection={
        Array [
          Object {
            "author": "Jean-Pierre DUPONT",
            "display": "text",
            "flags": Array [
              "CERTIFIED",
              "FAVORITE",
            ],
            "icon": "talend-file-xls-o",
            "id": 0,
            "modified": "2016-09-22",
            "name": "Title with few actions",
          },
          Object {
            "display": "text",
            "icon": "talend-file-xls-o",
            "id": 1,
            "modified": "2016-09-22",
            "name": "Title with lot of actions",
          },
          Object {
            "author": "Jean-Pierre DUPONT",
            "display": "text",
            "icon": "talend-file-xls-o",
            "id": 2,
            "modified": "2016-09-22",
            "name": "Title with persistant actions",
          },
        ]
      }
      defaultHeight={250}
      inProgress={true}
      rowHeight={60}
      rowRenderers={
        Object {
          "resource": [Function],
        }
      }
      selectionMode="MULTI"
      type="resource"
    />
  </div>
</div>
`;

exports[`ResourcePicker component snaps should render ResourcePicker without any Resource 1`] = `
<div
  className="tc-resource-picker theme-tc-resource-picker"
>
  <Toolbar />
  <div
    className="theme-tc-resource-picker-list-container"
  >
    <VirtualizedList
      collection={Array []}
      defaultHeight={250}
      rowHeight={60}
      rowRenderers={
        Object {
          "resource": [Function],
        }
      }
      selectionMode="MULTI"
      type="resource"
    />
  </div>
</div>
`;

exports[`ResourcePicker component snaps should render ResourcePicker without toolbar 1`] = `
<div
  className="tc-resource-picker theme-tc-resource-picker"
>
  <div
    className="theme-tc-resource-picker-list-container"
  >
    <VirtualizedList
      collection={
        Array [
          Object {
            "author": "Jean-Pierre DUPONT",
            "display": "text",
            "flags": Array [
              "CERTIFIED",
              "FAVORITE",
            ],
            "icon": "talend-file-xls-o",
            "id": 0,
            "modified": "2016-09-22",
            "name": "Title with few actions",
          },
          Object {
            "display": "text",
            "icon": "talend-file-xls-o",
            "id": 1,
            "modified": "2016-09-22",
            "name": "Title with lot of actions",
          },
          Object {
            "author": "Jean-Pierre DUPONT",
            "display": "text",
            "icon": "talend-file-xls-o",
            "id": 2,
            "modified": "2016-09-22",
            "name": "Title with persistant actions",
          },
        ]
      }
      defaultHeight={250}
      rowHeight={60}
      rowRenderers={
        Object {
          "resource": [Function],
        }
      }
      selectionMode="MULTI"
      type="resource"
    />
  </div>
</div>
`;
